fix(ie11): fix text truncate for client list on ie11

--- a/src/theme/sass/style.scss
+++ b/src/theme/sass/style.scss
@@ -22,6 +22,10 @@ code {
 }
 
 .truncate {
+	&.list-item {
+		flex: 1 1 100% !important;
+	}
+
 	> *:first-child {
 		white-space: nowrap;
 		overflow: hidden;
